@@ -10,7 +10,6 @@
 
 use strict; use warnings;
 use Test::More tests => 1;
-use Test::Exception;
 
 {
     package MyClass;
